# aviutl2-community-translation

./: .gitmodules  Gemfile  README.en.md  README.md  Rakefile  mise.toml
.github/workflows/: extract.yml
extract/: .env.production  Rakefile  effects.json
extract/plugin/: CMakeLists.txt  compile_flags.txt
extract/plugin/src/: ExtractPlugin.cpp
extract/reboot_plugin/: CMakeLists.txt
extract/reboot_plugin/src/: RebootPlugin.cpp
locales/: community_de.aul2  community_en.aul2  community_ja.aul2  original_english.aul2
translations/de/: editor.yml
translations/en/: editor.yml  effects.yml
translations/ja/: editor.yml  effects.yml
